2003-12-08  Theodore A. Roth  <troth@openavr.org>
[Contributed by Kolja Waschk <avus@ixo.de>]

	* configure.ac (AC_INIT): Bump version.
	* src/gnu_getopt.h: Protect against cygwin having already included 
	getop.h.
	* src/jtagio.cc (timeout_read): If either select() of read() fail and
	errno is set to EAGAIN, continue the loop instead of bombing out.
	* src/jtagrun.cc (jtagContinue): Use timeout_read() instead of read().

2003-12-06  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Bump version.
	* avarice.spec.in (%files): Add avarice man page.
	* doc/Makefile.am (man_MANS): Add avarice.1.
	(EXTRA_DIST): Remove install.txt.
	* doc/avarice.1: New file.
	* doc/install.txt: Remove file. This file talks about Aegis being the
	build system which is no longer true since we use autoconf/automake.
	* doc/running.txt: Add note about this file being out of date.
	* doc/todo.txt: Remove some entries that have been handled.
	Add some new entries.

2003-11-16  Theodore A. Roth  <troth@openavr.org>
[Thanks to Nils Kristian Strom <nilsst@omegav.ntnu.no>]

	* configure.ac (AC_INIT): Bump version.
	* src/jtag.h (initJtagBox): Change arguments (no args needed).
	(initJtagOnChipDebugging): New prototype.
	(jtagReadFuses): Ditto.
	* src/jtagio.cc (initJtagBox): Change arguments and move attach code
	to initJtagOnChipDebugging function.
	(initJtagOnChipDebugging): New function.
	* src/jtagrw.cc (jtagReadFuses): New function.
	* src/main.cc (main): Avoid disabling lock bits and setting FUSE_OCDEN
	when we are using avarice as a standalone device programmer.
	Move --write-fuses in front of the jtag debugger initialization, to
	make it possible to start debugging with all fuses written to their
	proper settings.

2003-11-16  Theodore A. Roth  <troth@openavr.org>
[Thanks to Nils Kristian Strom <nilsst@omegav.ntnu.no>]

	* src/jtag.h (jtagDisplayFuses): Add prototype.
	* src/jtagio.cc (initJtagBox): Use jtagDisplayFuses() instead of
	calling statusOut() directly.